<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lobb.fitnessapp.RoutineActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/buttonRoutinesBack"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/addRoutine"
        android:id="@+id/buttonAddRoutine"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/delete"
        android:id="@+id/buttonDeleteRoutine"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/buttonRoutinesBack"
        android:layout_alignEnd="@+id/buttonRoutinesBack" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewRoutines"
        android:layout_below="@+id/buttonAddRoutine"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_above="@+id/buttonViewRoutine" />

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/viewRoutine"
        android:id="@+id/buttonViewRoutine"
        android:layout_above="@+id/buttonRoutinesBack"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
